--- a/index.html
+++ b/index.html
@@ -7,28 +7,29 @@
           <link rel="stylesheet" href="./CSS/styles.css" />
           <meta name="description" content="Desafio feito pelo site www.draftcode.com" />
      </head>
-     <header>
-          <img src="/assets/logo.svg" alt="logo" />
-          <nav>
-               <ul class="menuCentralsuperior">
-                    <li><a href="#">Home</a></li>
-                    <li><a href="#">Chicletes</a></li>
-                    <li><a href="#">Contato</a></li>
-                    <li><a href="#">Sobre</a></li>
-               </ul>
-          </nav>
-          <img src="/assets/whatsapp.svg" alt="logo" />
-     </header>
      <body>
-          <section class="container">
-               <div class="image">   
-               </div>
-               <div class="card">
+          <header>
+               <img src="/assets/logo.svg" alt="logo" />
+               <nav>
+                    <ul class="menuCentralsuperior">
+                         <li><a href="#">Home</a></li>
+                         <li><a href="#">Chicletes</a></li>
+                         <li><a href="#">Contato</a></li>
+                         <li><a href="#">Sobre</a></li>
+                    </ul>
+               </nav>
+               <img src="/assets/whatsapp.svg" alt="logo" />
+          </header>
+          <section class="sectionContent">
+          <div class="container">
+               <div class="image">
+                    <div class="card">   
                     <h1>Lorem ipsum dolor sit amet consectetur. Sit.</h1>
                     <p>Lorem ipsum dolor sit amet consectetur. Sit.</p>
+                    </div>
                </div>
-          </section>
-
+          </div>
+     </section>
           <footer></footer>
      </body>
 </html>
