Inclusão do menuMobile, junto com a remoção. Funcao de ativar ao click

--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
      </head>
      <body>
           <header>
-               <img src="/assets/logo.svg" alt="logo" />
+               <img id="menuMobile" src="/assets/menu.svg" alt="mobile" />
+               <img class="logo" src="/assets/logo.svg" alt="logo" />
                <nav>
                     <ul class="menuCentralsuperior">
                          <li><a href="#">Home</a></li>
@@ -21,15 +22,16 @@
                <img src="/assets/whatsapp.svg" alt="logo" />
           </header>
           <section class="sectionContent">
-          <div class="container">
-               <div class="image">
-                    <div class="card">   
-                    <h1>Lorem ipsum dolor sit amet consectetur. Sit.</h1>
-                    <p>Lorem ipsum dolor sit amet consectetur. Sit.</p>
+               <div class="container">
+                    <div class="image">
+                         <div class="card">
+                              <h1>Lorem ipsum dolor sit amet consectetur. Sit.</h1>
+                              <p>Lorem ipsum dolor sit amet consectetur. Sit.</p>
+                         </div>
                     </div>
                </div>
-          </div>
-     </section>
+          </section>
           <footer></footer>
+          <script src="/script.js"></script>
      </body>
 </html>
