Continuação da pagina, Fonts, Ajustes em size e no card

--- a/index.html
+++ b/index.html
@@ -25,10 +25,15 @@
                <div class="container">
                     <div class="image">
                          <div class="card">
-                              <h1>Lorem ipsum dolor sit amet consectetur. Sit.</h1>
-                              <p>Lorem ipsum dolor sit amet consectetur. Sit.</p>
+                              <h1 class="cardH1">Lorem ipsum dolor sit amet consectetur. Sit.</h1>
+                              <p class="cardP">Lorem ipsum dolor sit amet consectetur. Malesuada nunc.</p>
                          </div>
                     </div>
+               </div>
+          </section>
+          <section class="sectionThumb">
+               <div>
+                    <h1 class="titleH1" id="h1h1">Lorem ipsum dolor sit amet consectetur. Sit.</h1>
                </div>
           </section>
           <footer></footer>
