--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pt-brn">
+<html lang="pt-br">
      <head>
           <meta charset="UTF-8" />
           <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -30,13 +30,65 @@
                          </div>
                     </div>
                </div>
-          </section>
-          <section class="sectionThumb">
-               <div>
-                    <h1 class="titleH1" id="h1h1">Lorem ipsum dolor sit amet consectetur. Sit.</h1>
+               <h1 class="titleH1" id="titleH1">Lorem ipsum dolor sit amet consectetur. Sit.</h1>
+
+               <section class="titleThumb">
+               <div class="thumb-container">
+                    <div class="thumb">
+                         <img src="/assets/foto_thumb.png" alt="candy" />
+                         <h1>Lorem ipsum dolor</h1>
+                         <p>Lorem ipsum dolor Lorem ipsum dolorLorem ipsum dolor</p>
+                    </div>
+                    <div class="thumb">
+                         <img src="/assets/foto_thumb.png" alt="candy" />
+                         <h1>Lorem ipsum dolor</h1>
+                         <p>Lorem ipsum dolor Lorem ipsum dolorLorem ipsum dolor</p>
+                    </div>
+                    <div class="thumb">
+                         <img src="/assets/foto_thumb.png" alt="candy" />
+                         <h1>Lorem ipsum dolor</h1>
+                         <p>Lorem ipsum dolor Lorem ipsum dolorLorem ipsum dolor</p>
+                    </div>
+                    <div class="thumb">
+                         <img src="/assets/foto_thumb.png" alt="candy" />
+                         <h1>Lorem ipsum dolor</h1>
+                         <p>Lorem ipsum dolor Lorem ipsum dolorLorem ipsum dolor</p>
+                    </div>
+                    <div class="thumb">
+                         <img src="/assets/foto_thumb.png" alt="candy" />
+                         <h1>Lorem ipsum dolor</h1>
+                         <p>Lorem ipsum dolor Lorem ipsum dolorLorem ipsum dolor</p>
+                    </div>
+                    <div class="thumb">
+                         <img src="/assets/foto_thumb.png" alt="candy" />
+                         <h1>Lorem ipsum dolor</h1>
+                         <p>Lorem ipsum dolor Lorem ipsum dolorLorem ipsum dolor</p>
+                    </div>
                </div>
-          </section>
-          <footer></footer>
+               <footer class="rodape">
+                    <div>
+                         <img class="logo" src="/assets/logo.svg" alt="logo" />
+                    </div>
+                    <div class="rodape-input">
+                         <p>Digite seu nome:</p>
+                         <input  type="email" name="email" id="email">
+                    </div>
+                    <div class="rodape-container">
+                         <div class="left">
+                              <span>Newslatter</span>
+                              <span>Home</span>
+                              <span>Chicletes</span>
+                         </div>
+                         <div class="right">
+                              <span>Contato</span>
+                              <span>Sobre</span>
+                              <span><img src="/assets/whatsapp.svg" alt="logo" width="20" height="20" /></span>
+                         </div>
+
+                    </div>
+               </footer>
+                    </section>
+               </div>
           <script src="/script.js"></script>
      </body>
 </html>
